<resources>
    <string name="app_name">My App Portfolio</string>
    
    <string name="title_my_nanodegree_apps">My Nanodegree Apps!</string>

    <string name="button_popular_movies">Popular Movies</string>
    <string name="button_stock_hawk">Stock Hawk</string>
    <string name="button_build_it_bigger">Build It Bigger</string>
    <string name="button_make_your_app_material">Make Your App Material</string>
    <string name="button_go_ubiquitous">Go Ubiquitous</string>
    <string name="button_capstone">Capstone</string>
    
    <string name="toast_launch_app">This button will launch my %s app!</string>
</resources>
