<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wouterdevos.myappportfolio.MainActivity">

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/title_my_nanodegree_apps" />

    <Button
        android:id="@+id/popular_movies_button"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/button_app_width"
        android:layout_height="wrap_content"
        android:onClick="launchApp"
        android:text="@string/button_popular_movies" />

    <Button
        android:id="@+id/stock_hawk_button"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/button_app_width"
        android:layout_height="wrap_content"
        android:onClick="launchApp"
        android:text="@string/button_stock_hawk" />

    <Button
        android:id="@+id/build_it_bigger_button"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/button_app_width"
        android:layout_height="wrap_content"
        android:onClick="launchApp"
        android:text="@string/button_build_it_bigger" />

    <Button
        android:id="@+id/make_your_app_material_button"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/button_app_width"
        android:layout_height="wrap_content"
        android:onClick="launchApp"
        android:text="@string/button_make_your_app_material" />

    <Button
        android:id="@+id/go_ubiquitous_button"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/button_app_width"
        android:layout_height="wrap_content"
        android:onClick="launchApp"
        android:text="@string/button_go_ubiquitous" />

    <Button
        android:id="@+id/capstone_button"
        style="@style/ButtonTheme"
        android:layout_width="@dimen/button_app_width"
        android:layout_height="wrap_content"
        android:onClick="launchApp"
        android:text="@string/button_capstone" />

</LinearLayout>
